Fixing styles to make facebook box overflow content

--- a/app/assets/stylesheets/layouts/application.css.sass
+++ b/app/assets/stylesheets/layouts/application.css.sass
@@ -12,11 +12,14 @@ body
     +grid-container
     width: 962px
     +clearfix
+    overflow: visible
     #logo
       +grid(7)
       .image
         float: left
         width: 100px
+        height: 100px
+        overflow: hidden
       .text
         float: right
         width: 430px
@@ -29,6 +32,6 @@ body
       margin-top: 10px
       padding: 10px
       width: 370px
-      height: 70px
+      height: 68px
       +border-top-left-radius(12px)
       +border-top-right-radius(12px)
